--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,14 @@
     --primario:#FFC107;
     --secundario :#01549D;
     --gris: #717171;
+/* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
+ya que una vez necesite modificar algo o mejorar me ubico mas rapido */
+
+/* Globales */
 }
-html{
+html{ 
     font-size: 62.5%;
-    box-sizing: border-box;
+    box-sizing: border-box; /*Hack para box models*
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -16,35 +20,9 @@ html{
 }
 
 body{
-    font-size: 16px;
+    font-size: 16px; /*1rem = 18px*/ 
     font-family:'Krub', sans-serif;
 }
-
-h1 {
-    font-size: 7.8rem;
-    color: var(--blanco);
-
-}
-
-h2 {
-    font-size: 2.8rem;
-
-}
-
-h3 {
-    font-size: 1.8rem;
-
-}
-
-h1,h2,h3 {
-    text-align: center;
-}
-
-.titulo span{
-    font-size:  2rem; 
-    color: var(--secundario);
-}
-
 .contenedor{
     max-width: 120rem;
     margin-top: 0;
@@ -56,13 +34,40 @@ h1,h2,h3 {
     background-color:var(--secundario);
     color: var(--blanco);
     padding: 1rem 3rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: bold;
     border-radius: .5rem;
+    width: 90%;
+    text-align: center;
 }
 
+@media (min-width: 768px) {
+    .boton{
+    width:auto;
+    }
+}
+/* Tipografía */
+h1 {
+    font-size: 7.8rem;
+    color: var(--blanco);
+}
+h2 {
+    font-size: 2.8rem;
+}
+h3 {
+    font-size: 1.8rem;
+}
+h1,h2,h3 {
+    text-align: center;
+}
+/* Titulos */
+.titulo span{
+    font-size:  2rem; 
+    color: var(--secundario);
+}
+/* Naegación Principal */
 .nav-bg{
     background-color: var(--secundario);
 }
@@ -79,7 +84,6 @@ a ser la pantalla de una tablet */
         flex-direction: row;
     }
 }
-
 .navegacion-principal a {
     display: block;
     text-align: center;
@@ -112,16 +116,16 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
     
 }
 
-/* se inserta imagen para dar un poco mas de estetica al inicio de la pagina */
-.hero{
-    background-image: url(../img/hero.jpg);
+/* se inserta imagen para dar un poco mas de estetica al inicio de la pagina o fondo */
+.fondo{
+    background-image: url(../img/fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
     position: relative;
 }
 
-.contenido-hero {
+.contenido-fondo {
     position: absolute;
     background-color:rgba(0, 0, 0,.3);
     width: 100%;
@@ -134,7 +138,17 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
 
 }
 
-.contenido-hero h2,
-.contenido-hero p {
+.contenido-fondo h2,
+.contenido-fondo p {
     color: var(--blanco);
 }
+
+.contenido-fondo .ubicacion{
+    display: flex;
+    align-items: flex-end;
+
+}
+/* .contenido-fondo-intro {
+    text-align: center;
+
+} */
