--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,29 @@
     --primario:#FFC107;
     --secundario :#01549D;
     --gris: #717171;
-/* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
-ya que una vez necesite modificar algo o mejorar me ubico mas rapido */
+    --grisClaro: #dfe9f3;
 
-/* Globales */
+/* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
+ya que una vez necesite modificar algo o mejorar me ubico mas rapido **/
+
+/* Globales **/
 }
 html{ 
     font-size: 62.5%;
-    box-sizing: border-box; /*Hack para box models*
+    box-sizing: border-box; /*Hack para box models**/
 }
 *, *:before, *:after {
   box-sizing: inherit;
-
 }
 
-body{
-    font-size: 16px; /*1rem = 18px*/ 
+body{ /*1rem = 18px**/
+    font-size: 16px;  
     font-family:'Krub', sans-serif;
+    background-image: linear-gradient(to top,var(--grisClaro) 0%, var(--blanco) 100%);
 }
 .contenedor{
     max-width: 120rem;
-    margin-top: 0;
-    margin-right: auto;
-    margin-bottom: 0;
-    margin-left: auto;
+    margin: 0 auto;
 }
 .boton{
     background-color:var(--secundario);
@@ -48,6 +47,14 @@ body{
     width:auto;
     }
 }
+.sombra {
+    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    background-color: var(--blanco);
+    padding: 2rem;
+    border-radius: 2rem;
+
+}
+
 /* Tipografía */
 h1 {
     font-size: 7.8rem;
@@ -75,13 +82,13 @@ h1,h2,h3 {
 .navegacion-principal {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 /* agrego este MQ para la que se cambie cuando la pantalla sea menor a 768px lo que vendria
 a ser la pantalla de una tablet */
 @media (min-width: 768px) {
     .navegacion-principal{
         flex-direction: row;
+        justify-content: space-between;
     }
 }
 .navegacion-principal a {
@@ -123,11 +130,13 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
     background-size: cover;
     height: 450px;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .contenido-fondo {
     position: absolute;
-    background-color:rgba(0, 0, 0,.3);
+    background-color:rgba( 0, 0, 0,.7 );
+    background-color: rgb( 0 0 0 / 70% );
     width: 100%;
     height: 100%;
 
@@ -149,8 +158,35 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
 
 }
 /* Servicios */
+@media (min-width: 768px) { 
 .servicios {
-    display: grid;
-    grid-template-columns: 300px 300px;
-    grid-template-rows: 200px 800px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 5rem;
+        }
+}
+.servicio{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+
+}
+.servicio p{
+    line-height: 2;
+
+}
+.servicio .iconos{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--gris);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
