--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,44 @@
-:root{
+:root {
     /* paleta de colores hexadecimal */
-    --blanco:#FFFFFF;
-    --oscuro:#212121;
-    --primario:#FFC107;
-    --secundario :#01549D;
+    --blanco: #FFFFFF;
+    --oscuro: #212121;
+    --primario: #FFC107;
+    --secundario: #01549D;
     --gris: #717171;
     --grisClaro: #dfe9f3;
 
-/* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
+    /* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
 ya que una vez necesite modificar algo o mejorar me ubico mas rapido **/
 
-/* Globales **/
-}
-html{ 
-    font-size: 62.5%;
-    box-sizing: border-box; /*Hack para box models**/
-}
-*, *:before, *:after {
-  box-sizing: inherit;
+    /* Globales **/
 }
 
-body{ /*1rem = 18px**/
-    font-size: 16px;  
-    font-family:'Krub', sans-serif;
-    background-image: linear-gradient(to top,var(--grisClaro) 0%, var(--blanco) 100%);
+html {
+    font-size: 62.5%;
+    box-sizing: border-box;
+    /*Hack para box models**/
 }
-.contenedor{
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+body {
+    /*1rem = 18px**/
+    font-size: 16px;
+    font-family: 'Krub', sans-serif;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
+}
+
+.contenedor {
     max-width: 120rem;
     margin: 0 auto;
 }
-.boton{
-    background-color:var(--secundario);
+
+.boton {
+    background-color: var(--secundario);
     color: var(--blanco);
     padding: 1rem 3rem;
     margin-top: 2rem;
@@ -40,15 +48,20 @@ body{ /*1rem = 18px**/
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border:none;
 }
 
 @media (min-width: 768px) {
-    .boton{
-    width:auto;
-    }
+    .boton {
+        width: auto;
+    }    
 }
+.boton:hover{
+    cursor: pointer;
+}
+
 .sombra {
-    box-shadow: 0px 5px 15px 0px rgba(112,112,112,0.48);
+    box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
     background-color: var(--blanco);
     padding: 2rem;
     border-radius: 2rem;
@@ -60,22 +73,45 @@ h1 {
     font-size: 7.8rem;
     color: var(--blanco);
 }
+
 h2 {
     font-size: 2.8rem;
 }
+
 h3 {
     font-size: 1.8rem;
 }
-h1,h2,h3 {
+
+h1,
+h2,
+h3 {
     text-align: center;
 }
+
 /* Titulos */
-.titulo span{
-    font-size:  2rem; 
+.titulo span {
+    font-size: 2rem;
     color: var(--secundario);
 }
+/* Utilidades */
+.w-100{
+    width: 100%;
+}
+@media (min-width: 768px){
+    .w-100{
+        width: auto;
+    }
+}
+.flex {
+    display: flex;
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
+
+}
 /* Naegación Principal */
-.nav-bg{
+.nav-bg {
     background-color: var(--secundario);
 }
 
@@ -83,14 +119,16 @@ h1,h2,h3 {
     display: flex;
     flex-direction: column;
 }
+
 /* agrego este MQ para la que se cambie cuando la pantalla sea menor a 768px lo que vendria
 a ser la pantalla de una tablet */
 @media (min-width: 768px) {
-    .navegacion-principal{
+    .navegacion-principal {
         flex-direction: row;
         justify-content: space-between;
     }
 }
+
 .navegacion-principal a {
     display: block;
     text-align: center;
@@ -101,7 +139,8 @@ a ser la pantalla de una tablet */
     padding: 1rem;
 
 }
-.navegacion-principal a:hover{
+
+.navegacion-principal a:hover {
     background-color: var(--gris);
     color: var(--blanco);
 
@@ -111,20 +150,17 @@ a ser la pantalla de una tablet */
 ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets,etc...  */
 
 @media (min-width: 480px) {
-    h1{
+    h1 {}
 
-    }
-    
 }
-@media (min-width: 768px) {
-    h1{
 
-    }
-    
+@media (min-width: 768px) {
+    h1 {}
+
 }
 
 /* se inserta imagen para dar un poco mas de estetica al inicio de la pagina o fondo */
-.fondo{
+.fondo {
     background-image: url(../img/fondo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -135,8 +171,8 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
 
 .contenido-fondo {
     position: absolute;
-    background-color:rgba( 0, 0, 0,.7 );
-    background-color: rgb( 0 0 0 / 70% );
+    background-color: rgba(0, 0, 0, .7);
+    background-color: rgb(0 0 0 / 70%);
     width: 100%;
     height: 100%;
 
@@ -152,35 +188,41 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
     color: var(--blanco);
 }
 
-.contenido-fondo .ubicacion{
+.contenido-fondo .ubicacion {
     display: flex;
     align-items: flex-end;
 
 }
+
 /* Servicios */
-@media (min-width: 768px) { 
-.servicios {
+@media (min-width: 768px) {
+    .servicios {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        column-gap: 5rem;
-        }
+        column-gap: 2rem;
+    }
 }
-.servicio{
+
+.servicio {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
+
 .servicio h3 {
     color: var(--secundario);
     font-weight: normal;
 
 }
-.servicio p{
+
+.servicio p {
     line-height: 2;
+    text-align: center;
 
 }
-.servicio .iconos{
+
+.servicio .iconos {
     height: 15rem;
     width: 15rem;
     background-color: var(--gris);
@@ -189,4 +231,63 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
     justify-content: space-evenly;
     align-items: center;
 
+}
+
+/** Contacto, Formulario**/
+.formulario{
+    background-color: var(--gris);
+    width: min( 60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+
+}
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--blanco);
+
+}
+@media (min-width: 768px){
+  .contenedor-campos{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto auto auto 20rem;
+    column-gap: 1rem;
+  }
+  .campo:nth-child(5){
+    grid-column: 3/2;
+
+  }
+}
+.campo{
+    margin-bottom: 1rem;
+
+}
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom:  .5rem;
+    display: block;
+}
+.campo textarea{
+    height: 20rem;
+}
+.input-text
+ {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius:  .5rem;
+
+}
+.enviar.boton{
+    width: 100%;
 }
