--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@
     /* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
 ya que una vez necesite modificar algo o mejorar me ubico mas rapido **/
 
-    /* Globales **/
-}
 
+}
+/* Globales **/
 html {
     font-size: 62.5%;
-    box-sizing: border-box;
-    /*Hack para box models**/
+    box-sizing: border-box; /*Hack para box models**/
+    scroll-snap-type: y mandatory;
 }
 
 *,
@@ -25,8 +25,7 @@ html {
     box-sizing: inherit;
 }
 
-body {
-    /*1rem = 18px**/
+body { /*1rem = 18px**/
     font-size: 16px;
     font-family: 'Krub', sans-serif;
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
@@ -259,11 +258,12 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
   .contenedor-campos{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto auto auto auto 20rem;
+    grid-template-rows: auto auto 30rem;
     column-gap: 1rem;
   }
-  .campo:nth-child(5){
-    grid-column: 3/2;
+  .campo:nth-child(5),
+  .campo:nth-child(6){
+    grid-column: 1/3;
 
   }
 }
@@ -290,4 +290,9 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
 }
 .enviar.boton{
     width: 100%;
+}
+
+/* Footer */
+.footer{
+    text-align: center;
 }
