--- a/css/style.css
+++ b/css/style.css
@@ -6,27 +6,29 @@
     --secundario: #01549D;
     --gris: #717171;
     --grisClaro: #dfe9f3;
+    --grisRojo: #FF0000;
+    
 
     /* Como buenas practicas me gusta tener el codigo bien estructurado y comentado
 ya que una vez necesite modificar algo o mejorar me ubico mas rapido **/
 
 
 }
-/* Globales **/
+
 html {
     font-size: 62.5%;
     box-sizing: border-box; /*Hack para box models**/
     scroll-snap-type: y mandatory;
 }
-
-*,
-*:before,
-*:after {
+/* SNI para toda pagina web que realizo sacado de, 
+https: //paulirish.com/2012/box-sizing-border-box-ftw/ */
+*,*:before,*:after {
     box-sizing: inherit;
 }
+/* Globales **/
 
 body { /*1rem = 18px**/
-    font-size: 16px;
+    font-size: 1.6rem;
     font-family: 'Krub', sans-serif;
     background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%);
 }
@@ -292,7 +294,60 @@ ya que con media q. se adapta a cualquier medida de pantalla pc,telefono,tablets
     width: 100%;
 }
 
+/* Formulario de Registro */
+
+.registro {
+    background-color: var(--gris);
+    width: min(60rem, 100%);
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+
+}
+
+.registro fieldset {
+    border: none;
+}
+
+.registro legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+
+}
+
+@media (min-width: 768px) {
+    .contenedor-campos-resgistro {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        grid-template-rows: auto auto 30rem;
+        column-gap: 1rem;
+    }
+
+    .campo-registro:nth-child(5),
+    .campo-registro:nth-child(6) {
+        grid-column: 1/3;
+
+    }
+}
+
+.campo-registro{
+    margin-bottom: 1rem;
+
+}
+
+.campo-registro label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
 /* Footer */
+
 .footer{
     text-align: center;
 }
